--- a/configs/config.yaml.example
+++ b/configs/config.yaml.example
@@ -4,7 +4,7 @@ server:
   write_timeout: 30s
 
 upload:
-  path: "./image"
+  path: "./images"
   base_url: "https://xxx.com/images/" # Nginx 代理的资源访问路径
   max_size: 10485760  # 10MB in bytes
 
