✨ feat: Rename BASE_URL to MEDIA_URL_PREFIX in configuration and documentation
- Updated environment variable from `BASE_URL` to `MEDIA_URL_PREFIX` for clarity in accessing uploaded media files.
- Modified related configuration structures and example files to reflect the new naming convention.
- Adjusted the upload service to utilize the new `MEDIA_URL_PREFIX` for generating file access URLs.

--- a/configs/config.yaml.example
+++ b/configs/config.yaml.example
@@ -5,7 +5,7 @@ server:
 
 upload:
   path: "./images"
-  base_url: "https://xxx.com/images/" # Nginx 代理的资源访问路径
+  media_url_prefix: "https://xxx.com/images/"  # 上传文件的访问URL前缀
   max_size: 10485760  # 10MB in bytes
 
 ocr:
