✨ feat: Add deployment workflow and configuration for media-processor
- Introduced a new GitHub Actions workflow for deploying the media-processor to a server, triggered by repository dispatch events.
- Created a deployment script to handle backup and deployment actions, ensuring safe updates to the service.
- Added a configuration template for environment variables, enhancing flexibility in deployment settings.
- Updated the release workflow to trigger the new deployment process upon successful package creation.
- Removed the obsolete example configuration file to streamline the configuration management.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -116,6 +116,25 @@ jobs:
             release/media-processor-windows-arm64.zip
             release/media-processor-macos-amd64.tar.gz
             release/media-processor-macos-arm64.tar.gz
+
+      - name: Trigger Deploy Workflow
+        if: success()
+        uses: peter-evans/repository-dispatch@v2
+        continue-on-error: true
+        id: deploy-trigger
+        with:
+          token: ${{ secrets.PAT_TOKEN }}
+          event-type: start-deploy
+          client-payload: '{"version": "${{ github.ref_name }}"}'
+
+      - name: Retry Deploy Trigger
+        if: steps.deploy-trigger.outcome == 'failure'
+        uses: peter-evans/repository-dispatch@v2
+        continue-on-error: true
+        with:
+          token: ${{ secrets.PAT_TOKEN }}
+          event-type: start-deploy
+          client-payload: '{"version": "${{ github.ref_name }}"}'
           
       - name: Clean up workspace
         if: always()
