🔧 fix: Update deployment script to include initialization step
- Added an initialization command to the deployment script in deploy.yml to ensure proper setup before backup and deployment actions.
- This change enhances the deployment process by ensuring that the necessary environment is prepared prior to executing backup and deployment tasks.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,6 +67,7 @@ jobs:
           ssh $SSH_USERNAME@$SSH_HOST 'sudo systemctl stop media-processor || true'
           
           # 备份和部署
+          ssh $SSH_USERNAME@$SSH_HOST "/tmp/deploy.sh ${DEPLOY_PATH} init"
           ssh $SSH_USERNAME@$SSH_HOST "/tmp/deploy.sh ${DEPLOY_PATH} backup"
           scp config.yaml $SSH_USERNAME@$SSH_HOST:${DEPLOY_PATH}/configs/
           scp media-processor/media-processor $SSH_USERNAME@$SSH_HOST:${DEPLOY_PATH}/
